# mctrans-ocr-helper

./: .gitignore  Cargo.toml  README.md  boxes.json  det.json  inp.json  ocr.json  package.bat  r.json  r_cuda.json  r_fast.json  result2.json  result2b.json  result_gguf.json  ri.json  run.bat
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: export_colorizer_onnx.py  export_denoiser_onnx.py
src/: colorize.rs  main.rs  settings.html
